--- a/public/assets/css/custom.css
+++ b/public/assets/css/custom.css
@@ -10,15 +10,6 @@ ul.top-menu-wrapper li {
     display: inline; 
 }
 
-/*.channels-menu-toggler {
-    margin-right: 80px;
-    cursor: pointer;
-    color: #fff;
-    -webkit-transform:rotate(0deg);
-    -ms-transform:rotate(0deg);
-    transform:rotate(0deg)
-}*/
-
 .toggler-opened {
     -webkit-transform: rotate(-180deg);
     -ms-transform: rotate(-180deg);
@@ -164,5 +155,9 @@ a.channel-reference {
 @media screen and (max-width: 800px) {
     .content {
         width: 100%;
+    }
+    .content-preloader {
+        margin: 0 auto;
+        text-align: center;
     }
 }
